update dependabot group

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,7 +10,7 @@ updates:
     schedule:
       interval: "monthly"
     groups:
-      all-deps:
+      all-dependencies:
         patterns:
           - "*" # Matches all dependencies
         update-types:
